--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dot": "^1.1.3",
-    "dotenv": "^16.4.7",
-    "env": "^0.0.2"
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
